# XY-MD02_WebApp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  callbacks.py  check_db.py  database.py  env.example  layout.py  modbus_reader.py  psychrometric.py  pyproject.toml  requirements.txt  test_app.py  test_modbus.py  test_timezone.py  translations.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  translation.md
.github/workflows/: ci-testing.yml  code-quality.yml  translation-validator.yml
src/: modbus_sensor_data.db-shm  modbus_sensor_data.db-wal
